# patina

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/food/: food.rs  food_parameters.rs  mod.rs
src/healthcare/: healthcare_parameters.rs  mod.rs
src/housing/: housing_parameters.rs  mod.rs
src/income/: income_calculations.rs  income_parameters.rs  mod.rs
src/leisure/: leisure_parameters.rs  mod.rs
src/misc/: misc_parameters.rs  mod.rs
src/saving/: mod.rs  saving_parameters.rs
src/taxes/: mod.rs  tax_parameters.rs
src/transport/: mod.rs  transport_parameters.rs
